deploy/test/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wordpress-test
  labels:
    app: wordpress
spec:
  to:
    kind: Service
    name: wordpress
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
